--- a/.gitignore
+++ b/.gitignore
@@ -1,130 +1,17 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   .python-version
-
-# pipenv
-#   .pewn
-
-# PEP 582
-__pypackages__/
-
-# Celery stuff
- celerybeat-schedule
- celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# Environment specific
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Database
+*.db
+*.db-journal
 
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# IDE
-.vscode/
-.idea/
+# Logs
+logs
+*.log
 
 # OS generated files
 .DS_Store
@@ -135,23 +22,31 @@ dmypy.json
 ehthumbs.db
 Thumbs.db
 
-# Database
-*.db
-*.db-journal
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+venv.bak/
+env.bak/
 
-# Credentials
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Secrets and sensitive files
 credentials.json
 token.pickle
 cookies.txt
 student_cookies.txt
 
-# Environment specific
-*.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Python specific
-*.swp
-*~
+# Temporary files
+*.tmp
+*.temp
+failed_syncs.json
